force-app/main/default/objects/Error_Log__c/fields/DropBox_Url__c.field-meta.xml
<CustomField>
    <fullName>DropBox_Url__c</fullName>
    <label>DropBox Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>