force-app/main/default/objects/Error_Log__c/fields/isLeadStale__c.field-meta.xml
<CustomField>
    <fullName>isLeadStale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLeadStale</label>
    <type>Checkbox</type>
</CustomField>