force-app/main/default/objects/Error_Log__c/fields/Lead_Stale_Error__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stale_Error__c</fullName>
    <label>Lead Stale Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>