force-app/main/default/objects/Error_Log__c/fields/Newly_Created_Account__c.field-meta.xml
<CustomField>
    <fullName>Newly_Created_Account__c</fullName>
    <label>Newly Created Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>