force-app/main/default/objects/Error_Log__c/fields/Newly_Opportunity_Record__c.field-meta.xml
<CustomField>
    <fullName>Newly_Opportunity_Record__c</fullName>
    <label>Newly Opportunity Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>