force-app/main/default/objects/Error_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Onboarding Form</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Operating Batch</fullName>
            </value>
            <value>
                <fullName>Delete Dropbox Files</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Client Warehouse</fullName>
            </value>
            <value>
                <fullName>POC HQ</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Dropbox Upsert</fullName>
            </value>
            <value>
                <fullName>DateWiseData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>